--- a/MVOPlatform/.eslintrc.json
+++ b/MVOPlatform/.eslintrc.json
@@ -7,7 +7,35 @@
         "selector": "MemberExpression[object.name='process'][property.name='env']",
         "message": "Direct process.env access is not allowed. Use config/env.ts instead."
       }
-    ]
+    ],
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "react/no-unescaped-entities": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "react-hooks/rules-of-hooks": "off",
+    "@next/next/no-img-element": "off",
+    "@next/next/no-html-link-for-pages": "off",
+    "prefer-const": "off",
+    "no-unused-vars": "off",
+    "no-console": "off",
+    "no-debugger": "off",
+    "no-empty": "off",
+    "no-irregular-whitespace": "off",
+    "no-prototype-builtins": "off",
+    "no-useless-escape": "off",
+    "prefer-spread": "off",
+    "prefer-rest-params": "off",
+    "react/display-name": "off",
+    "react/no-children-prop": "off",
+    "react/no-danger": "off",
+    "react/no-unknown-property": "off",
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "overrides": [
     {
