--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -11,31 +11,34 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@stripe/react-stripe-js": "^2.0.0",
+    "@stripe/stripe-js": "^2.0.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "fengari": "^0.1.4",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.294.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next-auth": "^4.24.0",
-    "stripe": "^14.0.0",
-    "@stripe/stripe-js": "^2.0.0",
-    "@stripe/react-stripe-js": "^2.0.0",
-    "framer-motion": "^10.16.0",
     "react-hook-form": "^7.48.0",
-    "zod": "^3.22.0",
-    "@hookform/resolvers": "^3.3.0",
-    "lucide-react": "^0.294.0",
-    "fengari": "^0.1.4"
+    "react-redux": "^9.2.0",
+    "stripe": "^14.0.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.2.0",
+    "autoprefixer": "^10.4.0",
+    "dotenv": "^17.2.3",
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.0",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "typescript": "^5.2.0"
   }
 }
-
