--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -14,15 +14,17 @@
     "@aws-sdk/client-s3": "^3.956.0",
     "@aws-sdk/lib-storage": "^3.956.0",
     "@hookform/resolvers": "^3.3.0",
+    "@next/eslint-plugin-next": "^16.1.1",
     "@reduxjs/toolkit": "^2.11.2",
     "@stripe/react-stripe-js": "^2.0.0",
     "@stripe/stripe-js": "^2.0.0",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "fengari": "^0.1.4",
     "framer-motion": "^10.16.0",
+    "glob": "^13.0.0",
     "lucide-react": "^0.294.0",
-    "next": "^14.0.0",
+    "next": "16.1",
     "next-intl": "^4.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,8 +40,8 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
     "dotenv": "^17.2.3",
-    "eslint": "^8.50.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.0",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
