--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -14,7 +14,6 @@
     "@aws-sdk/client-s3": "^3.956.0",
     "@aws-sdk/lib-storage": "^3.956.0",
     "@hookform/resolvers": "^3.3.0",
-    "@next/eslint-plugin-next": "^16.1.1",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.11.2",
     "@stripe/react-stripe-js": "^2.0.0",
@@ -31,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.0",
+    "react-is": "^19.2.3",
     "react-redux": "^9.2.0",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
@@ -38,9 +38,12 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^16.1.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "autoprefixer": "^10.4.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
