--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.48.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.6.0",
+    "sonner": "^2.0.7",
     "stripe": "^14.0.0",
     "zod": "^3.22.0"
   },
