--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/lib-storage": "^3.956.0",
     "@hookform/resolvers": "^3.3.0",
     "@next/eslint-plugin-next": "^16.1.1",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.11.2",
     "@stripe/react-stripe-js": "^2.0.0",
     "@stripe/stripe-js": "^2.0.0",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.294.0",
     "next": "16.1",
     "next-intl": "^4.6.1",
+    "radix-ui": "^1.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.0",
