--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.956.0",
     "@aws-sdk/lib-storage": "^3.956.0",
+    "@cerebras/cerebras_cloud_sdk": "^1.64.1",
     "@hookform/resolvers": "^3.3.0",
     "@next/eslint-plugin-next": "^16.1.1",
     "@reduxjs/toolkit": "^2.11.2",
@@ -23,6 +24,7 @@
     "fengari": "^0.1.4",
     "framer-motion": "^10.16.0",
     "glob": "^13.0.0",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.294.0",
     "next": "16.1",
     "next-intl": "^4.6.1",
