feat: Add AI Risk Highlighter for idea creation

--- a/MVOPlatform/.eslintrc.json
+++ b/MVOPlatform/.eslintrc.json
@@ -5,7 +5,7 @@
       "error",
       {
         "selector": "MemberExpression[object.name='process'][property.name='env']",
-        "message": "Direct process.env access is not allowed. Use config/env.ts instead."
+        "message": "Direct process.env access is not allowed. Use env-validation/config/env.ts instead."
       }
     ],
     "@typescript-eslint/no-explicit-any": "off",
