--- a/MVOPlatform/.env.local.template
+++ b/MVOPlatform/.env.local.template
@@ -7,5 +7,5 @@ SUPABASE_STORAGE_SECRET_ACCESS_KEY=value
 SUPABASE_STORAGE_BUCKET_NAME=value
 STRIPE_SECRET_KEY=value
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=value
-NEXT_PUBLIC_GEMINI_API_KEY=value
+GEMINI_API_KEY=value
 NEXT_PUBLIC_GEMINI_MODEL=gemini-2.5-flash-lite
