--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -20,9 +20,11 @@
     "@stripe/stripe-js": "^2.0.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@tanstack/react-query": "^5.90.16",
     "fengari": "^0.1.4",
     "framer-motion": "^10.16.0",
     "glob": "^13.0.0",
+    "hls.js": "^1.6.15",
     "lucide-react": "^0.294.0",
     "next": "16.1",
     "next-intl": "^4.6.1",
