feat: Implement credits system for protecting features from overusage

--- a/MVOPlatform/.env.local.template
+++ b/MVOPlatform/.env.local.template
@@ -5,7 +5,14 @@ SUPABASE_STORAGE_REGION=value
 SUPABASE_STORAGE_ACCESS_KEY_ID=value
 SUPABASE_STORAGE_SECRET_ACCESS_KEY=value
 SUPABASE_STORAGE_BUCKET_NAME=value
-STRIPE_SECRET_KEY=value
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=value
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=AZV2u8_IjVb-qKcK9v9v0MQs5HPIPhuiBMsUK2lifSUUYfTWlsmPF61EkCMXtwhU_-dHWIBJxJZULqbF
+NEXT_PUBLIC_PAYPAL_ENVIRONMENT=sandbox
+NEXT_PUBLIC_PAYPAL_CURRENCY=USD
+NEXT_PUBLIC_PAYPAL_INTENT=capture
+NEXT_PUBLIC_PAYPAL_LOCALE=en_US
+PAYPAL_CLIENT_SECRET=value
+PAYPAL_MERCHANT_ID=
+PAYPAL_ENABLE_FUNDING=
+PAYPAL_DISABLE_FUNDING=
 GEMINI_API_KEY=value
 NEXT_PUBLIC_GEMINI_MODEL=gemini-2.5-flash-lite
