--- a/MVOPlatform/.env.local.template
+++ b/MVOPlatform/.env.local.template
@@ -16,3 +16,4 @@ PAYPAL_ENABLE_FUNDING=
 PAYPAL_DISABLE_FUNDING=
 GEMINI_API_KEY=value
 NEXT_PUBLIC_GEMINI_MODEL=gemini-2.5-flash-lite
+SERPAPI_API_KEY=value
