--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -33,6 +33,7 @@
     "react-is": "^19.2.3",
     "react-redux": "^9.2.0",
     "recharts": "^3.6.0",
+    "serpapi": "^2.2.1",
     "sonner": "^2.0.7",
     "zod": "^3.22.0"
   },
