--- a/MVOPlatform/package.json
+++ b/MVOPlatform/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.294.0",
     "next": "16.1",
     "next-intl": "^4.6.1",
+    "posthog-js": "^1.336.4",
     "radix-ui": "^1.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
