--- a/MVOPlatform/.env.local.template
+++ b/MVOPlatform/.env.local.template
@@ -16,3 +16,5 @@ PAYPAL_ENABLE_FUNDING=
 PAYPAL_DISABLE_FUNDING=
 SERPAPI_API_KEY=value
 OPENAI_API_KEY=value
+NEXT_PUBLIC_POSTHOG_KEY=value
+NEXT_PUBLIC_POSTHOG_HOST=value
